[gd_scene load_steps=10 format=3 uid="uid://b44hykaf7yuqs"]

[ext_resource type="Script" path="res://scenesScripts/laserenemy.gd" id="1_g4bix"]
[ext_resource type="Texture2D" uid="uid://cogdfewsqx6d8" path="res://resources/le1.PNG" id="2_dp8qb"]
[ext_resource type="Texture2D" uid="uid://c3ix0ac0471q0" path="res://resources/11png.png" id="2_t5qw6"]
[ext_resource type="Texture2D" uid="uid://da271mv2h3b2j" path="res://resources/le2.PNG" id="3_djrsv"]
[ext_resource type="Texture2D" uid="uid://daqsyaieugaqx" path="res://resources/ll1.PNG" id="4_4b22t"]
[ext_resource type="Texture2D" uid="uid://hvp78g5258rh" path="res://resources/ll2.PNG" id="5_aw03f"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mt6t0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dp8qb")
}, {
"duration": 1.0,
"texture": ExtResource("3_djrsv")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4b22t")
}, {
"duration": 1.0,
"texture": ExtResource("5_aw03f")
}],
"loop": true,
"name": &"laser",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqjjl"]
size = Vector2(4000, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_bfpt6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_t5qw6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="laserenemy" type="CharacterBody2D" groups=["enemies"]]
z_index = 1
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_g4bix")

[node name="VisualSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 2
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_mt6t0")
animation = &"laser"

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="laser" type="CharacterBody2D" parent="."]
z_index = 6
z_as_relative = false
rotation = 3.14159
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="laser"]
position = Vector2(2000, 2.08165e-12)
shape = SubResource("RectangleShape2D_aqjjl")

[node name="sprite" type="AnimatedSprite2D" parent="laser/CollisionShape2D"]
modulate = Color(1, 1, 1, 0.352941)
scale = Vector2(4000, 6)
sprite_frames = SubResource("SpriteFrames_bfpt6")

[node name="FinTimer" type="Timer" parent="."]
one_shot = true

[node name="GlowTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-36, 2.08165e-12, 10, 76, 30, 76, 30, -76, 10, -76)

[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="FinTimer" to="." method="_on_fin_timer_timeout"]
[connection signal="timeout" from="GlowTimer" to="." method="_on_glow_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
